--- a/ProyBus/app/src/main/res/layout/activity_main.xml
+++ b/ProyBus/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="example.proybus.MainActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id = "@+id/RHE"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_weight="0"
+    android:padding="5dp"
+    >
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <TableRow android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/runLabel"
+            android:text="Panamericano"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textSize="15dp"
+            />
+        <TextView
+            android:id="@+id/hitLabel"
+            android:text="San Cristobal"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textSize="15dp"
+            />
+        <TextView
+            android:id="@+id/errorLabel"
+            android:text="Trans Esmeraldas"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textSize="15dp"
+            />
+    </TableRow>
 
-    </android.support.design.widget.AppBarLayout>
+    <TableRow android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/visitorRuns"
+            android:text="0"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/visitorHits"
+            android:text="0"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/visitorErrors"
+            android:text="0"
+            android:layout_height="wrap_content"
+            />
+    </TableRow>
 
-    <include layout="@layout/content_main" />
+    <TableRow android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/homeRuns"
+            android:text="0"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/homeHits"
+            android:text="0"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/homeErrors"
+            android:text="0"
+            android:layout_height="wrap_content"
+            />
+    </TableRow>
+</TableLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_dialog_email"
+        android:layout_marginTop="409dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/RHE"
+        android:layout_alignEnd="@+id/RHE" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
